--- a/Actief.html
+++ b/Actief.html
@@ -39,30 +39,35 @@
                 <p>India kan wel een cultuurschocker zijn. Dit kan komen door de hoeveelheid vervuiling en armoede in hun steden. Maar het blijft zeker aan te raden voor een unieke ervaring!</p>
                 <p>Kom heliskiën in de Himalaya's, waar je met een helikopter naar hoge bergtoppen wordt gebracht in bijvoorbeeld Kashmir waar je kunt verblijven in prachtige resorts.</p>
                 <p>Wist je dat er jaarlijks meer dan 12 miljoen ton aan mango's worden verbouw? Ze zijn ook erg zoet en sappig. Deze mango's verschillen erg met de mango's die in de Nederlandse supermarkten te koop zijn.</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>Kirgistan</h3>
                 <p>Dit land waarborgt prachtige berglandschappen, rijke cultuur en oude tradities die jij kan beleven. Ben jij een avonturier die graag een stap verder wil, dan moet je Kirgistan zeker bezoeken.</p>
                 <p>Er zijn wel een aantal dingen waar je rekening mee moet houden als je Kirigistan bezoekt. Zo is er sprake van (veel) criminaliteit in grotere steden, denk aan zakkenrollers en diefstal. Ook is het aangeraden om niet na zonsondergang te reizen.</p>
                 <p>Karakol heeft prachtige monumenten die je zeker moet bezoeken. Van Russische kerken tot Chinese moskees. Dit maakt deze stad nog specialer!</p>
                 <p>Wist je dat er nog velen bewoners in Kirgistan nomadisch leven? In de zomer trekken ze de bergen in met hun vee, en 's winters komen ze weer terug naar de stad. Ze leggen deze afstanden af op paarden.</p>
+                <img src="Plaatjes/Kirgistan_feest.png" alt="Kirgistan afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>Oezbekistan</h3>
                 <p>Het was eerst verplicht om een visum te hebben om Oezbekistan binnen te komen, maar dat is gelukkig veranderd. Hierdoor kost reizen minder, en is het makkelijker.</p>
                 <p>Zoals in meerdere landen in Azië zijn er wel een aantal dingen verboden. Het is bijvoorbeeld strafbaar om te tonen dat je lhbtiq+ bent. Ook is het goed om het reisadvies bij te houden, er vinden wel veligheidsrisio's achter.</p>
                 <p>Er zijn vaker off-roadtours met prachtige uitzichten. Gidsen nemen de tijd zodat jij alles gezien hebt voordat ze weer verder gaan. Als dit je niet bevalt kan je ook het berggebied Chimgon bezoeken. Velen vinden het wel aangenamer in de winter.</p>
                 <p>Oezbekistan bevat drie steden die meer dan 2500 jaar oud zijn: Samarkand, Buchara en Xiva. Deze steden moet je zeker bezoeken als je naar Oezbekistan op vakantie gaat!</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>Iran</h3>
                 <p>Reizen naar Iran kost niet veel. Accomodaties kunnen soms wel tegenvallen. De taxi, bus of andere vervoermiddelen zijn bijna kosteloos, dus je kan zeker gemakkelijk rondreizen!</p>
                 <p>Wees wel altijd op de hoede van het reisadvies voordat je hier op vakantie gaat. Er zijn grensgebieden waar het gevaarlijk kan zijn voor toeristen. Ook moet je respect tonen door te houden aan hun regels, die zijn op sommige vlakken wel verschillend vergeleken met Nederland.</p>
                 <p>Ondanks de grote hectare aan woestijn in Iran, hebben ze ook skigebieden. De drie bekendste bergen in Iran zijn de Alborz, Zagros en Elburz.</p>
                 <p>Wist je dat het skigebied Tochal, een van de langste gondelliften heeft ter wereld? Als je hier komt skiën dan kan je daar genieten van prachtige witte uitzichten. Vergeet dan alleen niet te gaan skiën!</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>Georgië</h3>
                 <p>Georgië is vrijwel een veilig land voor toeristen, ook is het betaalbaar, en dat maakt het altijd beter.</p>
                 <p>Een taxi nemen kan wel lastig zijn hier. Let altijd op het reisadvies, want er kunnen geweldsincidenten en aardbevingen voorkomen.</p>
                 <p>Er zijn prachtige wandelroutes die op jouw wachten in Kazegi of Tbilisi. Deze vinden plaats in de stad, hoog in de bergen of in hun woestijn.</p>
                 <p>Wist je dat dit land eigenlijk twee namen heeft? Voor ons heet het Georgië, maar onder de bevolking heet het ook Sakertvelo.</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
             </div>
             <div>
                 <h2>Europa</h2>
@@ -72,12 +77,14 @@
                 <p>Waar je vooral op moet letten is de datum wanneer je reist naar Oostenrijk, vooral in de bergen. ZO zijn er lawines, plots slecht weer en ook bosbranden.</p>
                 <p>Heb jij zin in paragliding, rafting of mountainbiken? Tirol biedt een grote variatie aan sporten en uitdagingen. Ook voor familieuitjes is het een geweldige plek om te komen!</p>
                 <p>Wist je dat de croissaint oorspronkelijk kwam uit Oostenrijk? Hij werd gebakken om een Ottomaanse invasie te herdenken in 1683. Het deeg is wel zoeter dan nu.</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>Frankrijk</h3>
                 <p>Tripjes kosten over het algemeen niet veel, maar dit is afhankelijk van de hoeveelheid toeristen die er komen. Ook is het natuur daar rond april en juni, alles kleurt zich mooi groen, wat wandelen in de natuur daar aantrekkelijk maakt.</p>
                 <p>Als jij zin hebt om te skiën in de winter in Frankrijk, dan moet je wel opletten op lawines, vooral buiten de officiële skipisten. Ga jij toch de stad in, dan is het vooral handig om op te letten voor zakkenrollers en oplichters.</p>
                 <p>Maak een uitstapje met je gezin naar de Franse Alpen, of ontdekt hoe prachtig de riviervalleien en grotten zijn in de Cevennen.</p>
                 <p>Wist je dat het volgens een oude wet verboden was om een varken 'Napoleon' te noemen? Blijkbaar vond de keizer zijn trots niet wou vernederen. Of deze wet nog geldt is een mythe.</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
             </div>
             <div>
                 <h2>Noord-Amerika</h2>
@@ -87,6 +94,7 @@
                 <p>Een tripje naar Canada kan wel buiten je budget zitten, het is duurder dan hier in Nederland. Verwacht ook dat je grote afstanden moet afleggen als je veel wilt rondreiden; Canada is groot!</p>
                 <p>Canada bezit prachtige en wonderschone natuurparken zoals Banff National Park en Jasper National Park. Voor de dierenliefhebbers: Er is ook een kans dat je wilde dieren tegenkomt.</p>
                 <p>In Canada wordt er niet alleen Engels gesproken, maar ook Frans! Maar als je goed Engels kunt spreken dan kom je overal terecht.</p>
+                <img src="Plaatjes/India_actief.png" alt="India afbeelding" class="type_vakanties_plaatjes">
             </div>
         </div>
     </main>
