--- a/Relaxvakanties.html
+++ b/Relaxvakanties.html
@@ -39,13 +39,13 @@
                 <p>De enige zaken waarmee rekening gehouden moet worden, zijn de hoge prijzen op toeristische plekken en het trage tempo van de Grieken door de siësta. Door het warme weer kan het voorkomen dat winkels en restaurants 's middags niet open zijn.</p>
                 <p>Het eiland bevat veel bezienswaardigheden. Denk bijvoorbeeld aan Lagune van Balos. De lagune verbindt het schiereiland Gramvousa met het eilandje Tigani. Gooi je handdoek uit op het strand en droom weg bij de azuurblauwe en turquoise kleuren van het water. Ook het meer van Kournas is zeer bekend. Het is het enige natuurlijke meer op Kreta. Houd je ogen open, want er leven hier zelfs schildpadden!</p>
                 <p>Wist je dat Kournas 'meer' betekent in het Arabisch?</p>
-                <img src="Plaatjes/Kreta.png" alt="Kreta afbeelding" class="type_vakanties_plaatjes">       <!--Door alle plaatjes in dezelfde class te stoppen, krijgen ze hetzelfde formaat-->
+                <img src="Plaatjes/Kreta_relax.png" alt="Kreta afbeelding" class="type_vakanties_plaatjes">       <!--Door alle plaatjes in dezelfde class te stoppen, krijgen ze hetzelfde formaat-->
                 <br>
                 <h3>Cyprus</h3>
                 <p>Je zou het misschien niet bedenken, maar ook Cyprus zit vol met ruïnes. Het eiland is perfect voor lekker luieren aan het strand. Kijk wel uit voor de hitte en natuurbranden bij een bezoek aan het prachtige eiland, want de temperatuur kan nog wel eens hard stijgen.</p>
                 <p>Bezoek vooral Akamas als je naar Cyprus gaat. Akamas is een bergachtig schiereiland en bevat nog ongerepte stranden.</p>
                 <p>Op het eiland schijnt de zon jaarlijks zo'n 340 dagen. De perfecte bestemming voor een relaxte vakantie dus!</p>
-                <img src="Plaatjes/Cyprus.png" alt="Cyprus afbeelding" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Cyprus_relax.png" alt="Cyprus afbeelding" class="type_vakanties_plaatjes">
             </div>
             <div>
                 <h2>Afrika</h2>
@@ -54,20 +54,20 @@
                 <p>Egypte zit vol met all-inclusive resorts. Hier vallen al je zorgen van je af, je kan hier volop genieten van de zon en de zee.</p>
                 <p>Pas wel op voor criminaliteit en oplichterij. Zakkenrollen en tasjesroof komt helaas regelmatig voor in de grotere steden, zoals Caïro en Alexandrië.</p>
                 <p>Verder is Egypte prachtig! Breng zeker een bezoek aan Hurghada. De ruim 30km lange kustlijn biedt mooie stranden, de beste surfspots en een adembenemende onderwaterwereld. De Rode Zee is beroemd om zijn levendige koraalriffen, die zich op slechts enkele meters van de kust bevinden.</p>
-                <img src="Plaatjes/Egypte.png" alt="Egypte afbeelding" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Egypte_relax.png" alt="Egypte afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>Jamaica</h3>
                 <p>Vergeet ook zeker niet Jamaica. Jamaica is een paradijs voor strandliefhebbers. Je vindt in Jamaica kleine baaien, lange witte zandstranden, ruige rotsen en schelpen en krabbetjes en surfbaaien. Deze stranden hebben de prachtigste zonsondergangen!</p>
                 <p>Pas ook hier op voor criminaliteit. Ook hier komt diefstal helaas regelmatig voor.</p>
                 <p>Altijd al willen zwemmen met dolfijnen? Bij de Dolphin cove kan het! Op deze prachtige locatie ontmoet je dolfijnen in hun natuurlijke habitat.</p>
                 <p>Jamaica is het land van de reggae, Bob Marley en een relaxte sfeer. Voor een relaxte vakantie ben je hier dus zeker aan het juiste adres.</p>
-                <img src="Plaatjes/Jamaica.png" alt="Jamaica afbeelding" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Jamaica_relax.png" alt="Jamaica afbeelding" class="type_vakanties_plaatjes">
                 <br>
                 <h3>De Seychellen</h3>
                 <p>De Seychellen is een eilandgroep tussen Afrika en Azië en bestaat uit maar liefst 115 eilanden! Het ligt midden in de Indische Oceaan en de eilandjes beschikken stuk voor stuk over parelwitte stranden en een rijke flora en fauna. Op de eilanden van de Seychellen bevindt zich een adembenemende en ongerepte natuur. Je komt hier volledig tot rust.</p>
                 <p>Let wel op wanneer je het eiland bezoekt, want tijdens het regenseizoen kunnen zware regenval en sterke stromingen nog wel eens voorkomen.</p>
                 <p>Op sommige eilanden leven reuzenschildpadden. Het meest bekende eiland waar u de reuzenschildpad kunt zien, is Curieuse Island, maar ook op Bird Island lopen ze rond. Prachtig!</p>
-                <img src="Plaatjes/Seychellen.png" alt="Seychellen afbeelding" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Seychellen_relax.png" alt="Seychellen afbeelding" class="type_vakanties_plaatjes">
             </div>
             <div>
                 <h2>Amerika</h2>
@@ -76,7 +76,7 @@
                 <p>Het eten in Mexico is echt boven verwachting. Enchillada's, Taquitos, Nacho's en Quesadillas kunnen daar elke dag genuttigd worden. En niet alleen dat, Mexico is ook nog eens veel goedkoper dan Nederland. Pas wel op voor het kraanwater in Mexico. Het kraanwater is namelijk niet drinkbaar. </p>
                 <p>Zet je sombrero op en geniet! Breng vooral een bezoek aan Yucatán. Dit schiereiland zit vol met zandstranden, azuurblauw water en een groen binnenland.</p>
                 <p>Kortom, Mexico is een topbestemming voor een relaxte vakantie door de haar bounty-stranden met hangmatten en helderblauw water.</p>
-                <img src="Plaatjes/Mexico.png" alt="Mexico afbeelding" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Mexico_relax.png" alt="Mexico afbeelding" class="type_vakanties_plaatjes">
             </div>
             <div>
                 <h2>Azië</h2>
@@ -85,7 +85,7 @@
                 <p>Thailand, ook wel het Land van de Glimlach, doet zeker eer aan zijn bijnaam. De Thai verwelkomen graag reizigers in hun land en doen er alles aan om het je naar je zin te maken. Daarnaast staat Thailand ook bekend om zijn ongerepte witte zandstranden en kristalheldere water.</p>
                 <p>Naast de zee zijn er nog veel meer opties om lekker te baden. In de omgeving van het bergdorpje Pai bevinden zich een aantal warmwaterbronnen. Het water is helder en de temperatuur schommelt tussen de 34 en 38 graden. Heerlijk relaxen dus!</p>
                 <p>Pas wel op voor het verkeer in Thailand. Het verkeer is namelijk enorm chaotisch en dat kan gevaarlijke situaties opleveren.</p>
-                <img src="Plaatjes/Thailand.png" alt="Thailand afbeelding" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Thailand_relax.png" alt="Thailand afbeelding" class="type_vakanties_plaatjes">
             </div>
         </div>
     </main>
