--- a/Memory/index.html
+++ b/Memory/index.html
@@ -16,11 +16,16 @@
         <img src="../Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron van het plaatje: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
     </div>
     <nav class="menu">      <!--Navigatie-->
-        <a class="navlinks" href="../index.html">Home</a>
-        <a class="navlinks" href="../Relaxvakanties.html">Relaxte vakanties</a>
-        <a class="navlinks" href="../Feestvakanties.html">Feestvakanties</a>
-        <a class="navlinks" href="../Actief.html">Actieve vakanties</a>
-        <a class="navlinks" href="../Cultuur.html">Culturele vakanties</a>
+        <div id="logo">
+            <a href="index.html">
+                <img src="Plaatjes/logowebsite.png">
+            </a>
+        </div>
+        <a class="navlinks" href="index.html">Home</a>
+        <a class="navlinks" href="Relaxvakanties.html">Relaxte vakanties</a>
+        <a class="navlinks" href="Feestvakanties.html">Feestvakanties</a>
+        <a class="navlinks" href="Actief.html">Actieve vakanties</a>
+        <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
     </nav>
 
     <main>
