--- a/Roulette.html
+++ b/Roulette.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <nav class="menu">
+    <nav class="menu">      <!--Navigatie-->
         <div id="logo">
             <a href="index.html">
                 <img src="Plaatjes/logowebsite.png">
