homeplaatje ook toegevoegd

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -26,7 +26,12 @@
         </div>
 
         <!--Navigatie-->
-        <nav class="menu">   
+        <nav class="menu">      
+            <div id="logo">
+                <a href="../index.html">
+                    <img src="../Plaatjes/logowebsite.png">
+                </a>
+            </div>
             <a class="navlinks" href="../index.html">Home</a>
             <a class="navlinks" href="../Relaxvakanties.html">Relaxte vakanties</a>
             <a class="navlinks" href="../Feestvakanties.html">Feestvakanties</a>
