--- a/places/India.html
+++ b/places/India.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+    <div class="header-image">
+        <img src="../Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron van het plaatje: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
+    </div>
     <nav class="menu">      <!--Navigatie-->
         <div id="logo">
             <a href="../index.html">
