--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <h3>Overtoerisme</h3>
         <p>In grote steden is het aantal toeristen vaak veel hoger dan in kleinbevolkte steden. Dit kan leiden tot overtoerisme, waardoor bestemmingen overvol raken door toeristen. Door bijvoorbeeld buiten het hoogseizoen te reizen en ook kleinere, minder bekende regio's te bezoeken, kun je bijdragen aan het verminderen van overtoerisme. Dit zorgt voor een rustigere vakantie, waardoor je meer kunt genieten van je reis.</p>
         <h3>Lokale accommodaties</h3>
+        <p>Bekende multinationals en fastfoodketens komen tegenwoordig bijna overal voor. Bezoek je deze vestigingen in ontwikkelingslanden, dan maken deze landen daar weinig winst op. Bezoek daarom lokale ondernemingen om bij te dragen aan de economie, waardoor de opbrengsten eerlijker worden verdeeld. Dit geldt ook voor het overnachten in familiehotels en het kopen van handgemaakte producten. Ook het deelnemen aan verschillende lokale activiteiten wordt gewaardeerd; denk hierbij aan workshops en cursussen. Bovendien ervaar je hierdoor ook culturele evenementen wat kan zorgen voor onvergetelijke ervaringen!</p>
         <h3></h3>
-         
 
 
 
