commentaar laatste dingen

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -129,7 +129,7 @@
     <!-- Python logica -->
     <py-script src="main.py"></py-script>
 
-    <!-- Confetti functie -->
+    <!-- Confetti -->
     <script>
         function showConfetti() {
             const confetti = document.getElementById("confetti");
