--- a/Cultuur.html
+++ b/Cultuur.html
@@ -37,16 +37,19 @@
                 <p>India is een land vol contrasten, waar oude tradities en modern leven naast elkaar bestaan. Je vindt er indrukwekkende tempels, drukke steden en diverse landschappen, van woestijnen tot hoge bergen.</p> 
                 <p>Voor veel reizigers kan India overweldigend zijn door de drukte, armoede en verschillen in leefstijl. Toch maken de cultuur, spiritualiteit en gastvrijheid het tot een unieke ervaring.</p> 
                 <p>Bezienswaardigheden zoals de Taj Mahal, kleurrijke markten en de Himalaya’s trekken mensen van over de hele wereld. De Indiase keuken is enorm gevarieerd en sterk afhankelijk van de regio.</p>
+                <img src="Plaatjes/India_cultuur.png" alt="India cultuur" class="type_vakanties_plaatjes"> 
                 <br>        
                 <h3>Laos</h3>
                 <p>Laos voelt rustig en ontspannen aan, vooral vergeleken met andere landen in Zuidoost-Azië. Het landschap bestaat uit bergen, rivieren en veel natuur, wat het land ideaal maakt voor reizigers die even willen ontsnappen aan drukte.</p> 
                 <p>Tijdens het reizen merk je dat alles wat langzamer gaat, van vervoer tot service. Respect voor religie en tradities is belangrijk, vooral bij tempelbezoeken.</p> 
                 <p>Luang Prabang, de Mekong-rivier en watervallen zoals Kuang Si laten goed zien hoe natuurlijk en vredig Laos is. Het land heeft geen zee, wat het extra bijzonder maakt in deze regio.</p>
+                <img src="Plaatjes/Laos_cultuur.png" alt="Laos cultuur" class="type_vakanties_plaatjes"> 
                 <br>
                 <h3>Vietnam</h3>
                 <p>Vietnam is een levendig land met groene rijstvelden, chaotische steden en een lange kustlijn. De cultuur is sterk aanwezig in het dagelijks leven en het eten speelt een grote rol, met verse kruiden en straatkraampjes op elke hoek.</p> 
                 <p>Reizen door Vietnam vraagt soms wat geduld door het drukke verkeer en het warme, vochtige klimaat. Toch zijn de mensen vriendelijk en behulpzaam, wat het reizen een stuk aangenamer maakt.</p> 
                 <p>Hoogtepunten zijn onder andere Halong Bay, de oude stad Hoi An en het bruisende Ho Chi Minh City. Vietnam staat daarnaast bekend om zijn koffie, die vaak sterker en zoeter is dan je gewend bent.</p>
+                <img src="Plaatjes/Vietnam_cultuur.png" alt="Vietnam cultuur" class="type_vakanties_plaatjes"> 
             </div>
             <div>
                 <h2>Afrika</h2>
@@ -54,16 +57,19 @@
                 <p>Marokko heeft een warme sfeer met smalle straatjes, kleurrijke souks en een mix van Arabische, Afrikaanse en Europese invloeden. De cultuur is zichtbaar in architectuur, eten en dagelijkse rituelen.</p> 
                 <p>Bij een bezoek is het belangrijk rekening te houden met lokale normen, vooral wat betreft kleding en gedrag. Afdingen op markten hoort er helemaal bij.</p> 
                 <p>Steden zoals Marrakech en Fez, maar ook de Sahara en het Atlasgebergte, laten de veelzijdigheid van het land goed zien.</p>
+                <img src="Plaatjes/Marokko_cultuur.png" alt="Marokko cultuur" class="type_vakanties_plaatjes"> 
                 <br>
                 <h3>Ghana</h3>
                 <p>Ghana staat bekend om zijn vriendelijke bevolking en sterke gemeenschapsgevoel. Muziek, dans en tradities spelen een grote rol in het dagelijks leven.</p> 
                 <p>Reizen door Ghana kan soms uitdagend zijn door het warme klimaat en de infrastructuur, maar de open houding van de mensen maakt veel goed.</p> 
                 <p>Langs de kust vind je historische forten, terwijl het binnenland bestaat uit natuurparken en levendige steden zoals Accra.</p>
+                <img src="Plaatjes/Ghana_cultuur.png" alt="Ghana cultuur" class="type_vakanties_plaatjes"> 
                 <br>
                 <h3>Oeganda</h3>
                 <p>Oeganda wordt vaak geprezen om zijn natuur en wildlife. Het landschap is afwisselend, met meren, savannes en dichte bossen.</p> 
                 <p>Tijdens het reizen is het verstandig gebruik te maken van lokale gidsen, vooral in natuurgebieden. De voorzieningen zijn niet overal even ontwikkeld.</p> 
                 <p>Het spotten van gorilla’s, safari’s en een bezoek aan het Victoriameer maken Oeganda tot een bijzondere bestemming.</p>
+                <img src="Plaatjes/Oeganda_cultuur.png" alt="Oeganda cultuur" class="type_vakanties_plaatjes"> 
             </div>
             <div>
                 <h2>Zuid- en Midden-Amerika</h2>
@@ -71,11 +77,13 @@
                 <p>Peru heeft een rijke geschiedenis die nog steeds zichtbaar is in oude steden en tradities. Het land combineert hoge bergen, jungle en kustgebieden.</p> 
                 <p>Reizigers moeten rekening houden met hoogteziekte in bergachtige gebieden zoals de Andes. Het klimaat verschilt sterk per regio.</p> 
                 <p>Plaatsen zoals Machu Picchu, Cusco en het Amazonegebied laten zien hoe indrukwekkend Peru is, zowel cultureel als natuurlijk.</p>
+                <img src="Plaatjes/Peruu_cultuur.png" alt="Peruu cultuur" class="type_vakanties_plaatjes"> 
                 <br>
                 <h3>Bolivia</h3>
                 <p>Bolivia voelt rauw en authentiek aan, met sterke inheemse invloeden en spectaculaire landschappen. Het land is minder toeristisch, wat het extra bijzonder maakt.</p> 
                 <p>Door de grote hoogte en eenvoudige infrastructuur kan reizen soms vermoeiend zijn. Een rustig tempo is daarom belangrijk.</p> 
                 <p>De zoutvlakte Salar de Uyuni, La Paz en het Titicacameer behoren tot de meest indrukwekkende plekken van het land.</p>
+                <img src="Plaatjes/Bolivia_cultuur.png" alt="Bolivia cultuur" class="type_vakanties_plaatjes"> 
             </div>
             <div>
                 <h2>Midden–Oosten</h2>
@@ -83,11 +91,13 @@
                 <p>Jordanië staat bekend om zijn historische rijkdom en indrukwekkende woestijnen. De sfeer is rustig en de mensen zijn vaak erg gastvrij.</p> 
                 <p>Bij een bezoek is het belangrijk rekening te houden met conservatieve normen en het warme klimaat. Respect voor cultuur en religie wordt gewaardeerd.</p> 
                 <p>Petra, Wadi Rum en de Dode Zee maken Jordanië tot een unieke reisbestemming.</p>
+                <img src="Plaatjes/Jordanie_cultuur.png" alt="Jordanie cultuur" class="type_vakanties_plaatjes"> 
                 <br>
                 <h3>Armenië en Georgië</h3>
                 <p>Armenië en Georgië liggen op het kruispunt van Europa en Azië en hebben een lange en bewogen geschiedenis. Bergen, kloosters en oude steden bepalen het landschap.</p> 
                 <p>Reizen kan soms uitdagend zijn door bergachtig terrein en beperkt openbaar vervoer, maar dat maakt het avontuur juist bijzonder.</p> 
                 <p>Steden zoals Yerevan en Tbilisi, samen met eeuwenoude kloosters en wijntradities, geven deze landen een eigen en karaktervolle sfeer.</p>
+                <img src="Plaatjes/Armenia_cultuur.png" alt="Armenia cultuur" class="type_vakanties_plaatjes"> 
             </div>
         </div>
     </main>
